[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mowaki"
version = "2.0"
dynamic = ["version"]
authors = [
  { name="Sam Santi", email="samuele@samuelesanti.com" },
]
description = "Utilities for MoWaKi (and other) apps"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}

[project.urls]
Homepage = "https://www.mowaki.org"
Repository = "https://github.com/rshk/mowaki-py"
Issues = "https://github.com/rshk/mowaki-py/issues"
